# minishell

./: CMakeLists.txt  Makefile  a.out  env.c  env_copy.c  exec.c  mini_main_MOET.c  minishell
includes/: minishell.h  minishell.h.gch
libft/: CMakeLists.txt  Makefile
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/srcs/: ft_atof.c  ft_atoi.c  ft_bzero.c  ft_c_to_str.c  ft_calloc.c  ft_free_array.c  ft_intlen.c  ft_intlen_base.c  ft_is_in_stri.c  ft_is_space.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_ssplit.c  ft_str_c_count.c  ft_str_end.c  (+22 more)
libft/srcs/ft_printf/: Makefile  ft_convert.c  ft_convert_int.c  ft_parse.c  ft_print_char.c  ft_print_digit.c  ft_print_hex.c  ft_print_ptr.c  ft_print_ud.c  ft_printf.c  ft_utils.c  utils.c
srcs/: main.c
